<resources>
    <string name="app_name">Quicro</string>

    <string name="action_settings">Settings</string>
    <string name="grabButton">Grab button</string>
    <string name="hint">Single click for next slide, double for previous slide</string>
    <string name="IPhint">Enter Server IP</string>
    <string name="connect_button">Connect</string>
    <string name="input_hint">Input your macro string for single click</string>
    <string name="input_hint2">Input your macro string for double click</string>
    <string name="input_hint3">Input your macro string for holding</string>
    <string name="current_single_click_macro">Current single click macro: None</string>
    <string name="current_double_click_macro">Current double click macro: None</string>
    <string name="current_hold_macro">Current Hold Macro: None</string>
    <string name="title_activity_syntax">Syntax</string>

    <string name="syntax_button">Syntax Help</string>
</resources>
