<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <EditText
        android:id="@+id/host_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/IPhint"/>

    <Button
        android:id="@+id/grab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/grabButton"/>

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:text="@string/connect_button"/>

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/grab_button"
        android:layout_marginTop="20dp"
        android:hint="@string/input_hint"/>

    <EditText
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input1"
        android:layout_centerVertical="true"
        android:hint="@string/input_hint2"/>

    <EditText
        android:id="@+id/input3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input2"
        android:layout_centerVertical="true"
        android:hint="@string/input_hint3"/>

    <TextView
        android:id="@+id/current_single_macro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input3"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/current_single_click_macro"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/current_double_macro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_single_macro"
        android:layout_marginBottom="20dp"
        android:text="@string/current_double_click_macro"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/current_hold_macro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_double_macro"
        android:text="@string/current_hold_macro"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/syntax_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/syntax_button"/>
</RelativeLayout>
